feat: production build added google tag manager for analitics

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta name="description" content="FINISH Inc is a modern software partner that specializes in taking AI-built, no-code, and custom apps from 80% to production. Fast, high-trust engineering.">
     <meta name="keywords" content="software engineering, app development, fix my app, AI builder finishing, Stripe integration, production deployment, tech debt cleanup, FINISH Inc">
     <meta name="author" content="FINISH Inc">
+
+    <!-- Google Tag Manager -->
+     <meta name="google-site-verification" content="Dv04N67u404wJhnB41VaF7vSbQFemSdb3xR7X7ftLss" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
